@@ -1,3 +1,11 @@
+2006-02-08  Luca Cavalli <loopback@slackit.org>
+
+	* gnome-da-capplet.c: (web_radiobutton_toggled_cb),
+	(web_item_comp), (mail_gconf_changed_cb), (term_gconf_changed_cb),
+	(show_dialog):
+	* gnome-da-xml.c: (gnome_da_xml_load_xml): fix some compilation
+	warnings. Close bug #330384.
+
 2006-01-28  chpe <chpe@gnome.org>
 
 	Fixes #327220
